--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    
 }
 
 
@@ -10,13 +11,13 @@ h2{
 }
 
 .h2{
-    color: orange;
+    color: #ff440046;
     font-weight:50;
     padding-left: 605px;
 }
 
 .espaciologo{
-    width: 35%;
+    width: 25%;
     border: 3px inset black;
     position: relative;
     left: auto;
@@ -25,27 +26,66 @@ h2{
 
 .h3{
      color: black;
-    
+    font-size: larger;
     
     font-style: oblique;
     width: 60%;
 height:60%;
 border: black;
+margin: 5px;
 position: absolute;
-left: 530px;
-top:130%;
-
-   
-    
+left: 480px;
+top:150%;
+  
 }
+
+#img1{
+    color: black;
    
+   font-style: oblique;
+   width: 400px;
+height: 400px;
+border: black solid whitesmoke;
+border-radius: 15px 30px;
+position: absolute;
+left: 10px;
+top:130%;
+   
+}
+#img2{
+    color: black;
+   
+    font-style: oblique;
+    width:400px;
+ height: 400px;
+ border: black solid whitesmoke;
+ border-radius: 15px 30px;
+ position: absolute;
+ left:480px;
+ top:130%;
+
+}
+#img3{
+    color: black;
+   
+    font-style: oblique;
+    width: 400px;
+ height: 400px;
+ border: black solid whitesmoke;
+ border-radius: 15px 30px;
+ position: absolute;
+ left: 950px;
+ top:130%;
+
+}
+
 
 u{
     color: blue;
 }
 
 .imagen1{
-    width: 1334px;
+    width: 1500px;
     border: 3px inset black;
     position: relative;
     left: 0;
@@ -53,8 +93,19 @@ u{
 } 
 
 .boton{
-    padding-left: 700px;
+    display: inline;
+    padding-left: 450px;
+    color: aliceblue;
+    letter-spacing: 2px;
+    font-size: 24px;
+    text-decoration: none;
+    overflow: hidden;
+    transition: 0.2s;
  
+}
+.boton:hover{
+    background: #ff4400c5 ;
+    box-shadow: 0 0 10px #ff4400c5  , 0 0 40px #ff4400c5, 0 0 80px #ff4400c5;
 }
 
 .h1 {
@@ -72,4 +123,7 @@ position: absolute;
 left: 85%;
 top:92%;
 
+}
+body{
+   background: url(https://th.bing.com/th/id/OIP.9RPmFs0DIHNcXTK7CZqnvQHaFS?pid=ImgDet&rs=1)
 }
